--- a/myhockeyapp/package.json
+++ b/myhockeyapp/package.json
@@ -7,12 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "c3-chart": "~0.0.1",
+    "consolidate": "~0.14.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "~2.4.1",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.9",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "c3-chart": "~0.0.1"
+    "node-uuid": "*"
   }
 }
