--- a/myhockeyapp/package.json
+++ b/myhockeyapp/package.json
@@ -14,8 +14,8 @@
     "ejs": "~2.4.1",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "mongoose": "^4.4.9",
-    "morgan": "~1.6.1",
+    // "mongoose": "^4.4.9",
+    // "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "node-uuid": "*"
   }
