--- a/myhockeyapp/public/bower.json
+++ b/myhockeyapp/public/bower.json
@@ -24,6 +24,7 @@
     "sb-admin-2": "*",
     "c3": "^0.4.10",
     "d3": "^3.5.16",
-    "jquery-validation": "^1.15.0"
+    "jquery-validation": "^1.15.0",
+    "jsoneditor": "^5.5.5"
   }
 }
