--- a/myhockeyapp/package.json
+++ b/myhockeyapp/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "express-validator": "^2.20.4",
     "jsoneditor": "^5.5.5",
+    "moment": "^2.13.0",
     "morgan": "^1.7.0",
     "node-uuid": "*",
     "pug": "^2.0.0-alpha6",
